// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemPendingLoans tests should load the details component 1`] = `
<Loader>
  <Error
    error={null}
  >
    <ResultsTable
      actionClickHandler={[Function]}
      actionComponent={null}
      name="Pending loans requests"
      rows={Array []}
      showAllClickHandler={
        Object {
          "handler": [Function],
          "params": null,
        }
      }
      showMaxRows={5}
    />
  </Error>
</Loader>
`;

exports[`ItemPendingLoans tests should render pending loans 1`] = `
<ItemPendingLoans
  data={
    Array [
      Object {
        "created": "2018-01-01T10:05:00.000Z",
        "end_date": "2018-01-01T10:05:00.000Z",
        "loan_pid": "loan1",
        "patron_pid": "patron_1",
        "start_date": "2018-01-01T10:05:00.000Z",
        "updated": "2018-01-01T10:05:00.000Z",
      },
      Object {
        "created": "2018-01-01T10:05:00.000Z",
        "end_date": "2018-01-01T10:05:00.000Z",
        "loan_pid": "loan2",
        "patron_pid": "patron_2",
        "start_date": "2018-01-01T10:05:00.000Z",
        "updated": "2018-01-01T10:05:00.000Z",
      },
    ]
  }
  fetchPendingLoans={[Function]}
  history={[Function]}
  item={
    Object {
      "metadata": Object {
        "document_pid": 111,
        "item_pid": 222,
      },
    }
  }
  showMaxPendingLoans={5}
>
  <Loader>
    <Error
      error={null}
    >
      <ResultsTable
        actionClickHandler={[Function]}
        actionComponent={null}
        name="Pending loans requests"
        rows={
          Array [
            Object {
              "ID": "loan1",
              "Patron ID": "patron_1",
              "Request created": "2018-01-01 10:05",
              "State": undefined,
            },
            Object {
              "ID": "loan2",
              "Patron ID": "patron_2",
              "Request created": "2018-01-01 10:05",
              "State": undefined,
            },
          ]
        }
        showAllClickHandler={
          Object {
            "handler": [Function],
            "params": null,
          }
        }
        showMaxRows={5}
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Header
              as="h3"
            >
              <h3
                className="ui header"
              >
                Pending loans requests
              </h3>
            </Header>
            <Table
              as="table"
              selectable={true}
              striped={true}
            >
              <table
                className="ui selectable striped table"
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      "ID",
                      "Request created",
                      "Patron ID",
                      "State",
                    ]
                  }
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                            collapsing={true}
                            width={2}
                          >
                            <TableCell
                              as="th"
                              className=""
                              collapsing={true}
                              width={2}
                            >
                              <th
                                className="collapsing two wide"
                              />
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="ID"
                            width={2}
                          >
                            <TableCell
                              as="th"
                              className=""
                              width={2}
                            >
                              <th
                                className="two wide"
                              >
                                ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Request created"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Request created
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Patron ID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Patron ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="State"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                State
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  actionClickHandler={[Function]}
                  actionComponent={null}
                  columns={
                    Array [
                      "ID",
                      "Request created",
                      "Patron ID",
                      "State",
                    ]
                  }
                  rows={
                    Array [
                      Object {
                        "ID": "loan1",
                        "Patron ID": "patron_1",
                        "Request created": "2018-01-01 10:05",
                        "State": undefined,
                      },
                      Object {
                        "ID": "loan2",
                        "Patron ID": "patron_2",
                        "Request created": "2018-01-01 10:05",
                        "State": undefined,
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan1"
                        key="loan1"
                      >
                        <tr
                          className=""
                          data-test="loan1"
                        >
                          <TableCell
                            as="td"
                            key="details"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                circular={true}
                                compact={true}
                                icon="eye"
                                onClick={[Function]}
                              >
                                <button
                                  className="ui circular compact icon button"
                                  onClick={[Function]}
                                >
                                  <Icon
                                    as="i"
                                    name="eye"
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="eye icon"
                                    />
                                  </Icon>
                                </button>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-loan1"
                            key="0-loan1"
                          >
                            <td
                              className=""
                              data-test="ID-loan1"
                            >
                              loan1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Request created-loan1"
                            key="1-loan1"
                          >
                            <td
                              className=""
                              data-test="Request created-loan1"
                            >
                              2018-01-01 10:05
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Patron ID-loan1"
                            key="2-loan1"
                          >
                            <td
                              className=""
                              data-test="Patron ID-loan1"
                            >
                              patron_1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="State-loan1"
                            key="3-loan1"
                          >
                            <td
                              className=""
                              data-test="State-loan1"
                            >
                              -
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan2"
                        key="loan2"
                      >
                        <tr
                          className=""
                          data-test="loan2"
                        >
                          <TableCell
                            as="td"
                            key="details"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                circular={true}
                                compact={true}
                                icon="eye"
                                onClick={[Function]}
                              >
                                <button
                                  className="ui circular compact icon button"
                                  onClick={[Function]}
                                >
                                  <Icon
                                    as="i"
                                    name="eye"
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="eye icon"
                                    />
                                  </Icon>
                                </button>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-loan2"
                            key="0-loan2"
                          >
                            <td
                              className=""
                              data-test="ID-loan2"
                            >
                              loan2
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Request created-loan2"
                            key="1-loan2"
                          >
                            <td
                              className=""
                              data-test="Request created-loan2"
                            >
                              2018-01-01 10:05
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Patron ID-loan2"
                            key="2-loan2"
                          >
                            <td
                              className=""
                              data-test="Patron ID-loan2"
                            >
                              patron_2
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="State-loan2"
                            key="3-loan2"
                          >
                            <td
                              className=""
                              data-test="State-loan2"
                            >
                              -
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={4}
                  showAllClickHandler={
                    Object {
                      "handler": [Function],
                      "params": null,
                    }
                  }
                  showMaxRows={5}
                />
              </table>
            </Table>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</ItemPendingLoans>
`;

exports[`ItemPendingLoans tests should render show a message with no pending loans 1`] = `
<ItemPendingLoans
  data={Array []}
  fetchPendingLoans={[Function]}
  history={[Function]}
  item={
    Object {
      "metadata": Object {
        "document_pid": 111,
        "item_pid": 222,
      },
    }
  }
  showMaxPendingLoans={5}
>
  <Loader>
    <Error
      error={null}
    >
      <ResultsTable
        actionClickHandler={[Function]}
        actionComponent={null}
        name="Pending loans requests"
        rows={Array []}
        showAllClickHandler={
          Object {
            "handler": [Function],
            "params": null,
          }
        }
        showMaxRows={5}
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Header
              as="h3"
            >
              <h3
                className="ui header"
              >
                Pending loans requests
              </h3>
            </Header>
            <Message
              data-test="no-results"
            >
              <div
                className="ui message"
                data-test="no-results"
              >
                There are no 
                Pending loans requests
              </div>
            </Message>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</ItemPendingLoans>
`;

exports[`ItemPendingLoans tests should render the show all button when showing only a few pending loans 1`] = `
<ItemPendingLoans
  data={
    Array [
      Object {
        "created": "2018-01-01T10:05:00.000Z",
        "end_date": "2018-01-01T10:05:00.000Z",
        "loan_pid": "loan1",
        "patron_pid": "patron_1",
        "start_date": "2018-01-01T10:05:00.000Z",
        "updated": "2018-01-01T10:05:00.000Z",
      },
      Object {
        "created": "2018-01-01T10:05:00.000Z",
        "end_date": "2018-01-01T10:05:00.000Z",
        "loan_pid": "loan2",
        "patron_pid": "patron_2",
        "start_date": "2018-01-01T10:05:00.000Z",
        "updated": "2018-01-01T10:05:00.000Z",
      },
    ]
  }
  fetchPendingLoans={[Function]}
  history={[Function]}
  item={
    Object {
      "metadata": Object {
        "document_pid": 111,
        "item_pid": 222,
      },
    }
  }
  showMaxPendingLoans={1}
>
  <Loader>
    <Error
      error={null}
    >
      <ResultsTable
        actionClickHandler={[Function]}
        actionComponent={null}
        name="Pending loans requests"
        rows={
          Array [
            Object {
              "ID": "loan1",
              "Patron ID": "patron_1",
              "Request created": "2018-01-01 10:05",
              "State": undefined,
            },
            Object {
              "ID": "loan2",
              "Patron ID": "patron_2",
              "Request created": "2018-01-01 10:05",
              "State": undefined,
            },
          ]
        }
        showAllClickHandler={
          Object {
            "handler": [Function],
            "params": null,
          }
        }
        showMaxRows={1}
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Header
              as="h3"
            >
              <h3
                className="ui header"
              >
                Pending loans requests
              </h3>
            </Header>
            <Table
              as="table"
              selectable={true}
              striped={true}
            >
              <table
                className="ui selectable striped table"
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      "ID",
                      "Request created",
                      "Patron ID",
                      "State",
                    ]
                  }
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                            collapsing={true}
                            width={2}
                          >
                            <TableCell
                              as="th"
                              className=""
                              collapsing={true}
                              width={2}
                            >
                              <th
                                className="collapsing two wide"
                              />
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="ID"
                            width={2}
                          >
                            <TableCell
                              as="th"
                              className=""
                              width={2}
                            >
                              <th
                                className="two wide"
                              >
                                ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Request created"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Request created
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Patron ID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Patron ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="State"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                State
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  actionClickHandler={[Function]}
                  actionComponent={null}
                  columns={
                    Array [
                      "ID",
                      "Request created",
                      "Patron ID",
                      "State",
                    ]
                  }
                  rows={
                    Array [
                      Object {
                        "ID": "loan1",
                        "Patron ID": "patron_1",
                        "Request created": "2018-01-01 10:05",
                        "State": undefined,
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan1"
                        key="loan1"
                      >
                        <tr
                          className=""
                          data-test="loan1"
                        >
                          <TableCell
                            as="td"
                            key="details"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                circular={true}
                                compact={true}
                                icon="eye"
                                onClick={[Function]}
                              >
                                <button
                                  className="ui circular compact icon button"
                                  onClick={[Function]}
                                >
                                  <Icon
                                    as="i"
                                    name="eye"
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="eye icon"
                                    />
                                  </Icon>
                                </button>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-loan1"
                            key="0-loan1"
                          >
                            <td
                              className=""
                              data-test="ID-loan1"
                            >
                              loan1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Request created-loan1"
                            key="1-loan1"
                          >
                            <td
                              className=""
                              data-test="Request created-loan1"
                            >
                              2018-01-01 10:05
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Patron ID-loan1"
                            key="2-loan1"
                          >
                            <td
                              className=""
                              data-test="Patron ID-loan1"
                            >
                              patron_1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="State-loan1"
                            key="3-loan1"
                          >
                            <td
                              className=""
                              data-test="State-loan1"
                            >
                              -
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={4}
                  showAllClickHandler={
                    Object {
                      "handler": [Function],
                      "params": null,
                    }
                  }
                  showMaxRows={1}
                >
                  <TableFooter
                    as="tfoot"
                    data-test="footer"
                    fullWidth={true}
                  >
                    <TableHeader
                      as="tfoot"
                      data-test="footer"
                      fullWidth={true}
                    >
                      <tfoot
                        className="full-width"
                        data-test="footer"
                      >
                        <TableRow
                          as="tr"
                          cellAs="td"
                        >
                          <tr
                            className=""
                          >
                            <TableHeaderCell
                              as="th"
                              colSpan={5}
                              textAlign="right"
                            >
                              <TableCell
                                as="th"
                                className=""
                                colSpan={5}
                                textAlign="right"
                              >
                                <th
                                  className="right aligned"
                                  colSpan={5}
                                >
                                  <span>
                                    Showing first 
                                    1
                                     entries of
                                     
                                    2
                                  </span>
                                  <span>
                                     
                                    <Button
                                      as="button"
                                      onClick={[Function]}
                                      size="small"
                                    >
                                      <button
                                        className="ui small button"
                                        onClick={[Function]}
                                      >
                                        Show all
                                      </button>
                                    </Button>
                                  </span>
                                </th>
                              </TableCell>
                            </TableHeaderCell>
                          </tr>
                        </TableRow>
                      </tfoot>
                    </TableHeader>
                  </TableFooter>
                </ResultsTableFooter>
              </table>
            </Table>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</ItemPendingLoans>
`;
